instructor added classes page added done

--- a/src/Pages/Dashboards/StudentDashBoard/Payment/CheckoutForm.css
+++ b/src/Pages/Dashboards/StudentDashBoard/Payment/CheckoutForm.css
@@ -13,12 +13,12 @@ html {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 } */
 
-form {
+.checkout-from {
   max-width: 500px;
   margin: 80px auto;
 }
 
-label {
+.checkout-from label {
   color: #6b7c93;
   font-weight: 300;
   letter-spacing: 0.025em;
@@ -60,7 +60,7 @@ button[disabled] {
   opacity: 0.6;
 }
 
-input,
+.checkout-from input,
 select {
   display: block;
   border: none;
