--- a/src/Pages/Dashboards/StudentDashBoard/Payment/CheckoutForm.css
+++ b/src/Pages/Dashboards/StudentDashBoard/Payment/CheckoutForm.css
@@ -26,7 +26,7 @@ html {
   display: block;
 }
 
-button {
+.checkout-from button {
   white-space: nowrap;
   border: 0;
   outline: 0;
@@ -48,7 +48,7 @@ button {
   margin-top: 10px;
 }
 
-button:hover {
+.checkout-from button:hover {
   color: #fff;
   cursor: pointer;
   background-color: #7795f8;
@@ -56,7 +56,7 @@ button:hover {
   box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
 }
 
-button[disabled] {
+.checkout-from button[disabled] {
   opacity: 0.6;
 }
 
@@ -77,7 +77,7 @@ select {
   /* width: 500px; */
 }
 
-input::placeholder {
+.checkout-from input::placeholder {
   color: #aab7c4;
 }
 
