--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 #root {
-  max-width: 1400px;
   margin: 0 auto;
   text-align: center;
+  font-family: "Poppins", sans-serif;
 }
